<resources>
    <string name="app_name">Rezoschool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rs_tweets">RS Tweets</string>
    <string name="user_profile">User Profile</string>
    <string name="payment">Payment</string>
    <string name="login">Login</string>
    <string name="please_input_your_mobile_number">Please input your mobile number</string>
    <string name="choose_class">Choose Class</string>
    <string name="are_you_going_to_finish_the_app">Are you going to finish the app?</string>
    <string name="sending_sms">Sending SMS…</string>
    <string name="successfully_sent">Successfully sent</string>
    <string name="successfully_applied_to_school_">Successfully applied to school </string>
    <string name="there_is_no_parent_for_this_student">There is no parent for this student</string>
    <string name="done">Done</string>
    <string name="calendar_per_course_">Calendar per Course </string>
    <string name="see_teachers">See Teachers</string>
    <string name="students_per">Students per</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="the_class_name_already_exists">The class name already exists</string>
    <string name="successfully_created">Successfully created</string>
    <string name="choose_level">Choose Level</string>
    <string name="create_new_course_in_">Create new course in </string>
    <string name="please_add_times">Please add times</string>
    <string name="coef_limit">Coefficient should be from 1 to 4</string>
    <string name="the_course_name_already_exists_in_class_">The course name already exists in class </string>
    <string name="choose_hour">Choose Hour</string>
    <string name="the_level_name_already_exists">The level name already exists</string>
    <string name="the_title_already_exists">The title already exists</string>
    <string name="successfully_submitted">Successfully submitted!</string>
    <string name="payment_processing">Payment processing…</string>
    <string name="payment_success">Payment success!</string>
    <string name="payment_queued">Payment queued!</string>
    <string name="level_fee">Level Fee</string>
    <string name="add_new_student">Add New Student</string>
    <string name="please_add_school_number">Please add school number</string>
    <string name="please_select_school_number">Please select school number</string>
    <string name="date_does_not_match_with_course_timeslot_please_try_other_one">Date does not match with course timeslot. Please try other one.</string>
    <string name="a_syllabus_already_set_in_the_same_timeslot">A syllabus already set in the same timeslot.</string>
    <string name="choose_course_timeslot">Choose Course Timeslot</string>
    <string name="next_general_thematic">Next General Thematic</string>
    <string name="search">Search</string>
    <string name="please_select_group_members">Please select group members</string>
    <string name="the_group_name_already_exists">The group name already exists</string>
    <string name="pdf_viewer">PDF Viewer</string>
    <string name="choose_teacher">Choose Teacher</string>
    <string name="finance_details">Finance Details</string>
    <string name="student_presence_absence">Student Presence &amp; Absence</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>
    <string name="poor">Poor</string>
    <string name="daily">Daily</string>
    <string name="absence">Absence</string>
    <string name="view_doc">View Doc</string>
    <string name="evaluation">Evaluation: </string>
    <string name="exam_result">Exam Result: </string>
    <string name="exam">Exam</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="teacher_syllabus_of_the_courses">Teacher Syllabus of the Courses</string>
    <string name="please_join_in_group_">Please join in group </string>
    <string name="you_are_not_allowed">You are not allowed</string>
    <string name="please_select_a_school">Please select a school</string>
    <string name="please_save_available_status">Please save available status</string>
    <string name="available">Available</string>
    <string name="level_">Level: </string>
    <string name="name_">Name: </string>
    <string name="user">User</string>
    <string name="description">Description</string>
    <string name="class_">Class: </string>
    <string name="join_call">Join Call</string>
    <string name="the_class_has_no_student">The class has no student</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="courses_">Courses: </string>
    <string name="students">Students</string>
    <string name="student_">Student: </string>
    <string name="method_">Method: </string>
    <string name="auth_number_">Auth Number: </string>
    <string name="school_type_">School Type: </string>
    <string name="allow">Allow</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="you_like_this_tweet">You like this tweet!</string>
    <string name="you_dislike_this_tweet">You dislike this tweet!</string>
    <string name="you_committed_successfully">You committed successfully</string>
    <string name="you_reported_successfully">You reported successfully</string>
    <string name="please_choose_a_course">Please choose a course</string>
    <string name="amount_xof_">Amount(XOF): </string>
    <string name="transaction_id_">Transaction ID: </string>
    <string name="pdf_file">PDF file</string>
    <string name="result_">Result: </string>
    <string name="date_">Date: </string>
    <string name="paid_">Paid: </string>
    <string name="remain_">Remain: </string>
    <string name="phone_">Phone: </string>
    <string name="email_">Email: </string>
    <string name="add_school">Add School</string>
    <string name="add_course">Add Course</string>
    <string name="are_you_going_to_join_a_group_video_call">Are you going to join a group video call?</string>
    <string name="actions">Actions</string>
    <string name="voice_message_deleted">Voice message deleted!</string>
    <string name="message_copied_to_clipboard">Message copied to clipboard!</string>
    <string name="message_from_chat">Message from chat</string>
    <string name="share_via">Share via</string>
    <string name="message_deleted">Message deleted!</string>
    <string name="image_url_copied_to_clipboard">Image URL copied to clipboard!</string>
    <string name="image_url">Image URL</string>
    <string name="image_deleted">Image deleted!</string>
    <string name="download">Download</string>
    <string name="downloaded_in_">Downloaded in </string>
    <string name="downloading_image_">Downloading image…</string>
    <string name="unavailable">Unavailable</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="please_apply_to_a_school">Please apply to a school</string>
    <string name="choose_date">Choose Date</string>
    <string name="error">Error</string>
    <string name="select_students">Select Students</string>
    <string name="select_users">Select Users</string>
    <string name="cropping_failed">Cropping failed: </string>
    <string name="file_attached">File attached</string>
    <string name="please_wait">Please wait…</string>
    <string name="resend_verification_code_in_59_seconds">Resend verification code in 59 seconds</string>
    <string name="verify">Verify</string>
    <string name="new_rs_tweets">New RS Tweets</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="create">Create</string>
    <string name="successfully_updated">Successfully Updated!</string>
    <string name="no_exam_result">No exam result</string>
    <string name="school">School</string>
    <string name="parent">Parent</string>
    <string name="student">Student</string>
    <string name="timeslots">Time Slots</string>
    <string name="create_new_course">Create New Course</string>
    <string name="course">Course</string>
    <string name="coefficient">Coefficient</string>
    <string name="coefficient_max">Coefficient (Max:4)</string>
    <string name="course_name">Course Name</string>
    <string name="weekdays">Weekdays</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="_class">Class</string>
    <string name="level">Level</string>
    <string name="create_new_level">Create New Level</string>
    <string name="level_name">Level Name</string>
    <string name="name">Name</string>
    <string name="courses">Courses</string>
    <string name="course_details">Course Details</string>
    <string name="create_new_class">Create New Class</string>
    <string name="class_name">Class Name</string>
    <string name="click_here_to_choose">Click here to choose</string>
    <string name="add">Add</string>
    <string name="teacher">Teacher</string>
    <string name="reset">Reset</string>
    <string name="syllabus">Syllabus</string>
    <string name="block">Block</string>
    <string name="are_you_going_to_remove_this_item">Are you going to remove this item?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="add_new_teacher">Add New Teacher</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="accepted">Accepted</string>
    <string name="waiting">Waiting</string>
    <string name="old">Old</string>
    <string name="_new">New</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sms">SMS</string>
    <string name="finance">Finance</string>
    <string name="success">Success</string>
    <string name="queued">Queued</string>
    <string name="method">Method</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="paid">Paid</string>
    <string name="remain">Remain</string>
    <string name="fee_setting">Fee Setting</string>
    <string name="library">Library</string>
    <string name="type_category_here">Type Category Here</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="loading">Loading…</string>
    <string name="message">Message</string>
    <string name="group_v_call">Group V-Call</string>
    <string name="no_items">No Items</string>
    <string name="text">Text</string>
    <string name="child">Child</string>
    <string name="fee_per_month_xof">Fee per month (XOF)</string>
    <string name="amount_xof">Amount (XOF)</string>
    <string name="merchant_id">Merchant ID</string>
    <string name="choose_method">Choose Method</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pay">Pay</string>
    <string name="my_school">My School</string>
    <string name="alumni">Alumni</string>
    <string name="student_name">Student Name</string>
    <string name="to">To</string>
    <string name="no_user">No User</string>
    <string name="send_sms">Send SMS</string>
    <string name="psychology_test">Psychology Test</string>
</resources>