<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/rs_tweets" />
        <item
            android:id="@+id/nav_timeslot"
            android:icon="@drawable/ic_menu_class"
            android:title="@string/timeslots" />
        <item
            android:id="@+id/nav_class"
            android:icon="@drawable/ic_menu_class"
            android:title="@string/_class" />
        <item
            android:id="@+id/nav_teacher"
            android:icon="@drawable/ic_menu_teacher"
            android:title="@string/teacher" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_menu_student"
            android:title="@string/student" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_menu_finance"
            android:title="@string/finance" />
        <item
            android:id="@+id/nav_child"
            android:icon="@drawable/ic_menu_student"
            android:title="@string/child" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/ic_school"
            android:title="@string/school" />
        <item
            android:id="@+id/nav_myschool"
            android:icon="@drawable/ic_school"
            android:title="@string/my_school" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_menu_class"
            android:title="@string/timeslots" />
        <item
            android:id="@+id/nav_syllabus"
            android:icon="@drawable/ic_syllabus"
            android:title="@string/syllabus" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_menu_exam"
            android:title="@string/exam" />
        <item
            android:id="@+id/nav_alumni"
            android:icon="@drawable/ic_alumni"
            android:title="@string/alumni" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_menu_library"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_menu_finance"
            android:title="@string/finance" />
        <item
            android:id="@+id/nav_message"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_video"
            android:icon="@android:drawable/presence_video_online"
            android:title="@string/group_v_call" />
        <item
            android:id="@+id/nav_psychology_test"
            android:icon="@drawable/ic_psychology_test"
            android:title="@string/psychology_test" />
        <item
            android:id="@+id/nav_psychology_result"
            android:icon="@drawable/ic_psychology_test"
            android:title="@string/psychology_test" />
        <item
            android:id="@+id/nav_psychology_edit"
            android:icon="@drawable/ic_psychology_edit"
            android:title="@string/psychology_edit" />
    </group>

</menu>
