<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".ui.NewPaymentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"

            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_student"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/student_name"
                android:inputType="text"
                android:singleLine="true"
                android:enabled="false"
                android:editable="false"
                android:textColor="@color/colorText"

                android:paddingLeft="5dp"
                android:background="@color/transparent"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/level"

            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_level_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/level_name"
                android:editable="false"
                android:enabled="false"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:textColor="@color/colorText"

                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fee_per_month_xof"

            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_level_fee"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/level_fee"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:enabled="false"
                android:background="@color/transparent"
                android:editable="false"
                android:textColor="@color/colorText"

                />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/amount_xof"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:hint="0.00"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:textColor="@color/colorText"

                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/merchant_id"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_merchant"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint="1234"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                android:textColor="@color/colorText"

                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/choose_method"
            />
        <RadioGroup
            android:id="@+id/pay_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <RadioButton
                android:id="@+id/pay_mtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="MTN Mobile Money"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/pay_dunya"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="PayDunya"
                />
            <RadioButton
                android:id="@+id/pay_bici"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="BICI"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/txt_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/mobile_number"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pay"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round" />
    </LinearLayout>
</RelativeLayout>