<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".ui.SchoolAddTeacherActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="20dp"
            android:fontFamily="@font/gibson_regular"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_teacher"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/teacher_name"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="20dp"
                android:focusable="false"
                android:editable="false"
                android:textColor="@color/colorText"
                android:fontFamily="@font/gibson_regular"
                android:paddingLeft="5dp"
                android:background="@color/transparent"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gibson_regular"
            android:textSize="20dp"
            android:text="@string/course"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_course"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                android:hint="@string/course_name"
                android:focusable="false"
                android:paddingLeft="5dp"
                android:editable="false"
                android:textSize="20dp"
                android:background="@color/transparent"
                android:textColor="@color/colorText"
                android:fontFamily="@font/gibson_regular"
                />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create"
            android:fontFamily="@font/gibson_bold"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round" />
    </LinearLayout>
</RelativeLayout>