<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".ui.NewLevelActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:id="@+id/edit_level"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/level_name"
                android:inputType="text"
                android:singleLine="true"
                android:paddingLeft="5dp"
                android:textColor="@color/colorText"
                android:background="@color/transparent"

                />
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create"
            android:fontFamily="@font/gibson_bold"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_round" />
    </LinearLayout>
</RelativeLayout>